<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mContacto"
        android:title="@string/menuo_datos">

    </item>
    <item android:id="@+id/mAcercaDe"
        android:title="@string/menuo_acercade">

    </item>
    <item android:id="@+id/mConfigurarContacto"
        android:title="@string/menuo_configurarc">

    </item>
    <item android:id="@+id/mFavorito"
        android:title="5Favoritos"
        app:showAsAction="always"
        android:icon="@drawable/estrella"
        app:elevation="@dimen/elevation_flowactionbutton">
    </item>
    <!--<android.support.design.widget.FloatingActionButton
                        android:id="@+id/fabMiFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/estrella"
                        android:layout_gravity="end|right"
                        android:onClick="irMascotasFavoritas"
                        app:borderWidth="@dimen/border_flowactionbutton"
                        app:elevation="@dimen/elevation_flowactionbutton"/>-->
</menu>