<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gt.silviarossana.mascotasfavoritas.fragment.MascotasFavoritas"
    android:orientation="vertical">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar_mascota">
    </include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_top_mdatos">

        <EditText
            android:id="@+id/etConfigurarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_configurar_cuenta" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/cuentas_configuradas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/hint_cuentas_configuradas"/>

    <Button
        android:id="@+id/btnGuardarCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/txtboton_guardar_cuenta"
        android:theme="@style/MiBotonRaised"
        android:onClick="btnClickconfigurarCuenta"/>

</LinearLayout>
